# av-toolbox

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.codex/skills/av-toolbox/: SKILL.md
.codex/skills/av-toolbox/agents/: openai.yaml
.codex/skills/av-toolbox/references/: av-toolbox-playbook.md
.github/workflows/: ci.yml  denseav-gpu-smoke.yml
deploy/cloudflare/: cloudflared-config.example.yml
deploy/systemd/: av-toolbox-public-demo.service.example
docs/: cloudflare-demo.md  denseav.md  developer-readme.md  examples.md  quickstart.md  tool-catalog.md  ui-tool-test-plan.md
scripts/: make_gallery_gif.sh
src/av_toolbox/: __init__.py  builtins.py  cli.py  demo_media.py  public_demo.py  ui_defaults.py  web.py  web_app.py  web_server.py
src/av_toolbox/audio/: __init__.py  beat_detection.py  energy.py  event_detection.py  music_phase.py  overlay.py  transcription.py
src/av_toolbox/av/: __init__.py  denseav.py  denseav_utils.py  overlay.py  sync_correspondence.py
src/av_toolbox/core/: __init__.py  audio_io.py  base_tool.py  cache.py  hardware.py  media_io.py  outputs.py  registry.py  result.py  simple_outputs.py  workspace.py
src/av_toolbox/resources/: __init__.py
src/av_toolbox/video/: __init__.py  action_recognition.py  blur_exposure.py  camera_shake.py  cut_detection.py  foreground_motion.py  image_quality.py  motion.py  object_detection.py  obstruction.py  optical_flow.py  pose.py  segmentation.py  shot_boundary.py  shot_type.py  source_overlay.py  st_action.py  yolo_utils.py
tests/: conftest.py  test_audio_tools.py  test_av_sync_correspondence.py  test_blur_exposure_tool.py  test_cache.py  test_cli.py  test_demo_video.py  test_denseav_tool.py  test_image_quality_tool.py  test_import.py  test_media_io.py  test_motion_tool.py  test_optical_flow_tool.py  test_output_video_codec.py  test_ported_tools.py  test_registry.py  test_release_metadata.py  test_shot_boundary_tool.py  test_source_video_overlay.py  test_transcription_device.py  test_web.py  test_yolo_device.py
