[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "av-analysis-toolbox"
version = "0.1.0"
description = "Installable audio, video, and audio-visual analysis toolbox"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Peng", email = "yanp@zhaw.ch" },
]
maintainers = [
    { name = "Peng", email = "yanp@zhaw.ch" },
]
keywords = [
    "audio",
    "video",
    "audio-visual",
    "analysis",
    "computer-vision",
    "ffmpeg",
    "denseav",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/yanpeng0520/av-toolbox"
Repository = "https://github.com/yanpeng0520/av-toolbox"
Documentation = "https://github.com/yanpeng0520/av-toolbox/tree/main/docs"
Issues = "https://github.com/yanpeng0520/av-toolbox/issues"
Changelog = "https://github.com/yanpeng0520/av-toolbox/releases"

[project.optional-dependencies]
video = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
]
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
]
transcription = [
    "faster-whisper>=1.0",
]
pose = [
    "mediapipe>=0.10",
]
action = [
    "torch>=2.0",
    "torchvision>=0.15",
    "pytorchvideo>=0.1",
    "fvcore>=0.1.5",
    "iopath>=0.1.10",
]
vision-models = [
    "ultralytics>=8.0",
    "pillow>=9.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.40",
]
cut-detection = [
    "transnetv2-pytorch>=1.0",
    "scenedetect>=0.6",
]
av = [
    "av>=12.0",
]
torch = [
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
]
denseav = [
    "av>=12.0",
    "pillow>=9.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
]
web = [
    "streamlit>=1.35",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "tomli>=2.0; python_version < '3.11'",
]
all = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "librosa>=0.10",
    "soundfile>=0.12",
    "faster-whisper>=1.0",
    "av>=12.0",
    "pillow>=9.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "pytorchvideo>=0.1",
    "fvcore>=0.1.5",
    "iopath>=0.1.10",
    "ultralytics>=8.0",
    "transformers>=4.40",
    "mediapipe>=0.10",
    "transnetv2-pytorch>=1.0",
    "scenedetect>=0.6",
    "streamlit>=1.35",
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
av-toolbox = "av_toolbox.cli:main"

[tool.setuptools.package-data]
av_toolbox = ["resources/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["av_toolbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
